Fixed lightbox errors

--- a/photographer.html
+++ b/photographer.html
@@ -21,6 +21,28 @@
         </a>
       </nav>
     </header>
+    
+    <!--Lightbox-->
+    <div id="lightbox" aria-label="lightbox closeup for images and videos portfolio">
+      <div class="lightBox__arrow lightBox__previous-arrow">
+        <button class="fas fa-angle-left"></button>
+      </div>
+      <div class="close-slider">
+        <div id="message-nav">
+          <div id="message-text">
+            Utilisez les flèches "droite" et "gauche" pour naviguer entre les médias
+          </div>
+          <div class="lightBox__content">
+          </div>
+        </div>
+        <div class="lightBox__closeBtn">
+          <button class="lightBox__close fas fa-times"></button>
+        </div>
+      </div>
+      <div class="lightBox__arrow lightBox__next-arrow">
+          <button class="fas fa-angle-right"></button>
+      </div>
+    </div>
 
     <main id="main">
 
@@ -85,10 +107,6 @@
       </section>
 
     </main>
-
-    <!-- Lightbox -->
-    <div id="lightbox" aria-label="lightbox closeup for images and videos portfolio">
-		</div>
 
     <!-- Card Info Insert with total likes and Price -->
     <aside class="card-insert">
