Fixed Lightbox js code (issue with media slides)

--- a/photographer.html
+++ b/photographer.html
@@ -23,7 +23,7 @@
     </header>
     
     <!--Lightbox-->
-    <div id="lightbox" aria-label="lightbox closeup for images and videos portfolio">
+    <div id="lightbox" role="dialog" aria-label="lightbox closeup for images and videos portfolio">
       <div class="lightBox__arrow lightBox__previous-arrow">
         <button class="fas fa-angle-left"></button>
       </div>
