--- a/photographer.html
+++ b/photographer.html
@@ -132,25 +132,25 @@
         novalidate>
           <!-- First, Last name, email, message labels and inputs -->
           <div id="contactDataFirstName" class="contactData">
-            <label aria-label="first-name-label" class="contactData__label" tabindex="0" for="firstName-input">*Prénom</label>
+            <label aria-label="first-name-label" class="contactData__label" for="firstName-input">*Prénom</label>
             <input name="firstName" type="text" class="contactData__input" placeholder="ex. Jane" aria-label="First name" id="firstName-input" required/>
             <br>
             <span id="first_error" class="error"></span>
           </div>
           <div id="contactDataLastName" class="contactData">
-            <label aria-label="last-name-label" class="contactData__label" tabindex="0" for="lastName-input">*Nom</label>
+            <label aria-label="last-name-label" class="contactData__label" for="lastName-input">*Nom</label>
             <input name="lastName" type="text" class="contactData__input" placeholder="ex. Doe" aria-label="Last name" id="lastName-input" required/>
             <br>
             <span id="last_error" class="error"></span>
           </div>
           <div id="contactDataEmail" class="contactData contactData__email">
-            <label aria-label="email-label" class="contactData__label" tabindex="0" for="email-input">*Email</label>
+            <label aria-label="email-label" class="contactData__label" for="email-input">*Email</label>
             <input name="email" type="email" class="contactData__input" aria-label="Email" id="email-input" placeholder="ex. jane.doe@example.com" required/>
             <br>
             <span id="email_error" class="error"></span>
           </div>
           <div id="contactDataMessage" class="contactData contactData__message">
-            <label aria-label="message-label" class="contactData__label" tabindex="0" for="message-input">*Votre message</label>
+            <label aria-label="message-label" class="contactData__label" for="message-input">*Votre message</label>
             <textarea name="message" cols="30" rows="10" class="text-area" aria-label="Your message" placeholder="Veuillez écrire votre message dans ce champs." id="message-input" required></textarea>
             <span id="message_error" class="error"></span>
           </div>
